// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorSettings renders EditorSettings 1`] = `
<Fragment>
  <Popover
    bodyContent={
      <div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Syntax
          </div>
          <SettingsDropdown
            id="mode-dropdown"
            isDisabled={false}
            items={
              Array [
                "Text",
                "Json",
                "Ruby",
                "Html_ruby",
                "Sh",
                "Xml",
                "Yaml",
              ]
            }
            label="Ruby"
            onSelect={[Function]}
          />
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Keybind
          </div>
          <SettingsDropdown
            id="keybindings-dropdown"
            isDisabled={false}
            items={
              Array [
                "Default",
                "Emacs",
                "Vim",
              ]
            }
            label="vim"
            onSelect={[Function]}
          />
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Theme
          </div>
          <SettingsDropdown
            id="themes-dropdown"
            isDisabled={false}
            items={
              Array [
                "Github",
                "Monokai",
              ]
            }
            label="Github"
            onSelect={[Function]}
          />
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Autocompletion
          </div>
          <div
            className="dropdown btn-group"
          >
            <input
              checked={true}
              id="autocompletion-checkbox"
              name="autocompletion"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Live Autocompletion
          </div>
          <div
            className="dropdown btn-group"
          >
            <input
              checked={false}
              disabled={false}
              id="live-autocompletion-checkbox"
              name="liveAutocompletion"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
      </div>
    }
    enableFlip={false}
    hasAutoWidth={true}
    headerContent="Settings"
    id="cog-popover"
    position="bottom"
    triggerRef={[Function]}
  />
  <Tooltip
    content="Settings"
    position="top"
  >
    <Button
      className="editor-button"
      id="cog-btn"
      variant="link"
    >
      <Icon
        size="md"
      >
        <CogIcon />
      </Icon>
    </Button>
  </Tooltip>
</Fragment>
`;

exports[`EditorSettings renders EditorSettings w/preview 1`] = `
<Fragment>
  <Popover
    bodyContent={
      <div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Syntax
          </div>
          <SettingsDropdown
            id="mode-dropdown"
            isDisabled={true}
            items={
              Array [
                "Text",
                "Json",
                "Ruby",
                "Html_ruby",
                "Sh",
                "Xml",
                "Yaml",
              ]
            }
            label="Ruby"
            onSelect={[Function]}
          />
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Keybind
          </div>
          <SettingsDropdown
            id="keybindings-dropdown"
            isDisabled={true}
            items={
              Array [
                "Default",
                "Emacs",
                "Vim",
              ]
            }
            label="vim"
            onSelect={[Function]}
          />
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Theme
          </div>
          <SettingsDropdown
            id="themes-dropdown"
            isDisabled={false}
            items={
              Array [
                "Github",
                "Monokai",
              ]
            }
            label="Github"
            onSelect={[Function]}
          />
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Autocompletion
          </div>
          <div
            className="dropdown btn-group"
          >
            <input
              checked={true}
              id="autocompletion-checkbox"
              name="autocompletion"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
        <div
          className="cog-popover-dropdown"
        >
          <div
            className="cog-popover-dropdown-title"
          >
            Live Autocompletion
          </div>
          <div
            className="dropdown btn-group"
          >
            <input
              checked={false}
              disabled={false}
              id="live-autocompletion-checkbox"
              name="liveAutocompletion"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
      </div>
    }
    enableFlip={false}
    hasAutoWidth={true}
    headerContent="Settings"
    id="cog-popover"
    position="bottom"
    triggerRef={[Function]}
  />
  <Tooltip
    content="Settings"
    position="top"
  >
    <Button
      className="editor-button"
      id="cog-btn"
      variant="link"
    >
      <Icon
        size="md"
      >
        <CogIcon />
      </Icon>
    </Button>
  </Tooltip>
</Fragment>
`;
